# ProctoAI

./: .gitignore
fastapi-backend/: .env.example  DATABASE_TROUBLESHOOTING.md  README.md  pyproject.toml  requirements.txt
fastapi-backend/alembic/versions/: a097babf817f_create_users_table.py  a8f5b4811ad4_init.py  c4d5e6f7a8b9_create_violations_table.py  d5e6f7a8b9c0_add_created_by_to_exams.py  d5e6f7a8b9c0_add_evidence_url_to_violations.py  e6f7a8b9c0d1_create_exam_reports_table.py  f1a2b3c4d5e6_create_admin_actions_table.py  g2c3d4e5f6a7_add_createdby_to_exams.py
fastapi-backend/app/: main.py
fastapi-backend/app/api/: deps.py
fastapi-backend/app/core/: config.py  storage.py
fastapi-backend/app/crud/: __init__.py  admin.py  exam.py  question.py  report.py  student.py  violation.py
fastapi-backend/app/db/: init_db.py  session.py
fastapi-backend/app/models/: __init__.py  admin_action.py  exam.py  exam_report.py  proctoring_log.py  question.py  student.py  user.py  violation.py
fastapi-backend/app/schemas/: __init__.py  admin.py  exam.py  exam_submission.py  proctoring.py  question.py  report.py  teacher.py  user.py
fastapi-backend/app/services/: report_generator.py  trust_score.py  violation_logger.py
fastapi-backend/fastapi_backend/: .env.example  README.md  alembic.ini  requirements.txt
fastapi-backend/fastapi_backend/alembic/: env.py
fastapi-backend/fastapi_backend/app/: main.py
fastapi-backend/fastapi_backend/tests/: conftest.py  (+7 more)
fastapi-backend/scripts/: check_db_schema.py  reset_db.py
fastapi-backend/tests/: conftest.py  test_exam.py
(+148 files in other folders)
