[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.0",
    "bcrypt>=5.0.0",
    "email-validator==2.1.1",
    "fastapi==0.115.8",
    "httpx==0.28.1",
    "minio==7.2.15",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pytest==8.3.5",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.30.6",
]
